# DocAI

./: .gitignore  README.md  app.py  pyproject.toml
utils/: gemini_engine.py  pdf_processor.py  simple_generator.py  simple_search.py
